modifications suite à analyse Wave : correction des contrastes, descriptions des attributs alt + renommage des photos

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,12 +111,13 @@ header .name {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #807732;
 	border-radius:0 ;
 }
 
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
+	cursor: pointer;
 }
 
 .item-column {
